frontend/test/should_fail/index_exec_node_fromIndexSame_index2_mismatch.grg
#using "index_exec_model.gm"

sequence s(i:set<Node>, j:int)
{
	{ i=nodesFromIndexSame(bari, j) }
}